--- a/index.html
+++ b/index.html
@@ -31,12 +31,7 @@
         </div>
 
         <!-- search history -->
-        <ul class="search-history">
-          <!-- <li class="search-history-item">Austin</li>
-        <li class="search-history-item">Chicago</li>
-        <li class="search-history-item">New York</li>
-        <li class="search-history-item">Orlando</li> -->
-        </ul>
+        <ul class="search-history"></ul>
       </div>
 
       <!-- MAIN CONTENT -->
@@ -56,15 +51,7 @@
         <!-- forecast -->
         <div class="forecast">
           <h2 class="forecast-title">5-Day Forecast:</h2>
-          <ul class="forecast-days">
-            <!-- forecast card -->
-            <!-- <li class="forecast-card">
-            <h3 class="forecast-card-date">8/16/2019</h3>
-            <div class="forecast-card-icon"><i class="fas fa-sun"></i></div>
-            <p class="forecast-card-temp">Temp: 86.84 F</p>
-            <p class="forecast-card-humidity">Humidity: 43%</p>
-          </li> -->
-          </ul>
+          <ul class="forecast-days"></ul>
         </div>
       </main>
     </div>
